--- a/project-manager.html
+++ b/project-manager.html
@@ -40,19 +40,23 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://watershedsecurity.applytojob.com/apply/cJCqqWywkF/IT-Project-Manager'>IT Project Manager - Watershed Security - Career Page</a></h5> 
+<h5><a href='https://www.ihireconstruction.com/jobs/view/253064631?utm_campaign=Employer+Job+Tweets&utm_content=Twitter&utm_term=2019-10-31&utm_medium=Social'>Project Manager - Orlando, </a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='http://watershedsecurity.applytojob.com/apply/cJCqqWywkF/IT-Project-Manager'>IT Project Manager - Watershed Security - Career Page</a></h5> 
+<p><span class="badge badge-light">Fairfax, VA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://eygbl.referrals.selectminds.com/experienced-opportunities/jobs/tech-consulting-senior-ddna-program-manager-o365-governance-101190'>Tech Consulting Senior - DDnA - Program Manager (O365 Governance) - EY Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/oak-street-health/job/oIUsbfwZ'>Oak Street Health Careers - Clinical Informatics Specialist (CIS) Program Manager</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois  Chicago</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Expeditors/743999698610511-project-manager-ii-it-operations-management'>Expeditors Project Manager II ? IT Operations Management | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Expeditors/743999698610511-project-manager-ii-it-operations-management'>Expeditors Project Manager II ? IT Operations Management | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -84,7 +88,7 @@
 <p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/torrid/job/o9Mqbfwg'>Torrid Careers - Production Project Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/torrid/job/o9Mqbfwg'>Torrid Careers - Production Project Manager</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -104,7 +108,7 @@
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://spotlab.recruitee.com/o/clinical-project-manager-madrid'>
+<h5><a href='https://spotlab.recruitee.com/o/clinical-project-manager-madrid'>
       Clinical Project Manager - SpotLab
     </a></h5> 
 <p><span class="badge badge-light">Madrid, Spain  Madrid</span></p>
@@ -166,7 +170,7 @@
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/xylem-hun/job/oeGrbfwg'>Xylem Careers - Project Manager/Sr. Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/xylem-hun/job/oeGrbfwg'>Xylem Careers - Project Manager/Sr. Project Manager</a></h5> 
 <p><span class="badge badge-light">Charlotte North Carolina</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -208,11 +212,11 @@
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e585244'>Stellenangebot: Senior Project Manager Event/G?ste Management (m/w) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e585244'>Stellenangebot: Senior Project Manager Event/G?ste Management (m/w) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cbre.referrals.selectminds.com/CBRE0O.bVn'>Associate Project Manager, Healthcare Construction - CBRE Careers</a></h5> 
+<h5><a href='https://cbre.referrals.selectminds.com/CBRE0O.bVn'>Associate Project Manager, Healthcare Construction - CBRE Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -228,7 +232,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ironcladts/758f709b-2747-4703-8349-0eb034d569f2'>Ironclad Technology Services - Program Manager- DEAMS</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ironcladts/758f709b-2747-4703-8349-0eb034d569f2'>Ironclad Technology Services - Program Manager- DEAMS</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -248,7 +252,7 @@
 <p><span class="badge badge-light">Bellevue Bellevue, WA Bellevue, WA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.echinacities.com/jobchapter/1354720851?fromat=26'>Project Manager - Jobs in Shanghai?????????????????????????</a></h5> 
+<h5><a href='https://jobs.echinacities.com/jobchapter/1354720851?fromat=26'>Project Manager - Jobs in Shanghai?????????????????????????</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -256,7 +260,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698567797-rexroth-project-manager-bluesky'>Bosch Group Rexroth ? Project manager - BlueSky | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698567797-rexroth-project-manager-bluesky'>Bosch Group Rexroth ? Project manager - BlueSky | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -284,7 +288,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.kyyti.com/jobs/312492-deployment-project-manager'>Deployment Project Manager - Kyyti Group</a></h5> 
+<h5><a href='https://careers.kyyti.com/jobs/312492-deployment-project-manager'>Deployment Project Manager - Kyyti Group</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -296,7 +300,7 @@
 <p><span class="badge badge-light">Broomfield, Colorado</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://potentialpark.applytojob.com/apply/aHRLgwVLu3/Project-Manager-For-A-German-Pilot-Study'>Project Manager for a German pilot study - Potentialpark - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://potentialpark.applytojob.com/apply/aHRLgwVLu3/Project-Manager-For-A-German-Pilot-Study'>Project Manager for a German pilot study - Potentialpark - Career Page</a></h5> 
 <p><span class="badge badge-light">Stockholm Stockholm, Sweden</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -320,7 +324,7 @@
 <p><span class="badge badge-light">Missoula Atlanta, GAGlendale, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://cennox.applytojob.com/apply/JVVaaQkVGl/Electrical-Project-Manager'>Electrical Project Manager - Cennox - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://cennox.applytojob.com/apply/JVVaaQkVGl/Electrical-Project-Manager'>Electrical Project Manager - Cennox - Career Page</a></h5> 
 <p><span class="badge badge-light">Missoula Atlanta, GAGlendale, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -446,10 +450,6 @@
 <h5><a href='https://www.volvogroup.com/en-en/careers/job-listing/100267BR.html'>Public Project Manager G?teborg</a></h5> 
 <p><span class="badge badge-light">Brazil France</span></p>
 <p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/servicenow/job/o5prbfwQ'>ServiceNow Careers - Principal Program Manager, Veteran Programs</a></h5> 
-<p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
-<p>Posted on: 2019-10-31</p>
 <hr/>
 
 
