--- a/full-stack.html
+++ b/full-stack.html
@@ -108,7 +108,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Jscrambler/743999698574379-senior-javascript-fullstack-developer-architect'>Jscrambler Senior JavaScript FullStack Developer / Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Jscrambler/743999698574379-senior-javascript-fullstack-developer-architect'>Jscrambler Senior JavaScript FullStack Developer / Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -144,7 +144,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/codility/bdda66d4-9157-45a0-a269-70c29feab7fb'>Codility - Fullstack Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/codility/bdda66d4-9157-45a0-a269-70c29feab7fb'>Codility - Fullstack Developer</a></h5> 
 <p><span class="badge badge-light">Warsaw, Poland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -196,7 +196,7 @@
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/hibrrc69q4uehngfgmr1tdpehh'>Senior Full Stack Software Engineer | CardinalHire</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/hibrrc69q4uehngfgmr1tdpehh'>Senior Full Stack Software Engineer | CardinalHire</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -204,7 +204,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qRzaVfwf&k=Job&j=owDNafwQ&__jvst=Employee&__jvsd=sY27chw5&__jvsc=Twitter&bid=nOndpMw4'> Plutora Careers - Senior Full Stack .Net Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qRzaVfwf&k=Job&j=owDNafwQ&__jvst=Employee&__jvsd=sY27chw5&__jvsc=Twitter&bid=nOndpMw4'> Plutora Careers - Senior Full Stack .Net Developer</a></h5> 
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -282,7 +282,7 @@
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/c5f7bkffpe9nfuzhwpy5u3e41o'>Full Stack Programmer II  | Current Openings</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/c5f7bkffpe9nfuzhwpy5u3e41o'>Full Stack Programmer II  | Current Openings</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CAUnited States  Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -374,7 +374,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698458405-stage-de-developpement-fullstack-java-h-f-'>ASI STAGE DE D?VELOPPEMENT FULLSTACK JAVA (H/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698458405-stage-de-developpement-fullstack-java-h-f-'>ASI STAGE DE D?VELOPPEMENT FULLSTACK JAVA (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
